--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <section>
         <div class="banner">
             <div class="navbar">
-                <img src="Images/diamond.png" alt="Xcharmine logo" class="logo">
+                <img src="diamond.png" alt="Xcharmine logo" class="logo">
                 <ul class="sub">
                     <div class="top">
                         <li><a href="index.html">HOME</a></li>
@@ -18,8 +18,8 @@
                         <li><a href="contact.html">CONTACT</a></li>
                     </div>
                 </ul>
-                <img src="Images/menu.png" alt="" class="menu">
-                <img src="Images/close.png" alt="" class="close">
+                <img src="menu.png" alt="" class="menu">
+                <img src="close.png" alt="" class="close">
             </div>
             <div class="title">
                 <h1>CREATIVE WEB <span>DEVELOPERS</span></h1>
